Veretino 0.5.2
* Implemented the ability to detect Moved files.
    Added item Status: "Moved". It will mark renamed or moved files [if enabled in settings].
    An item will be marked with the "Moved" status if its computed checksum matches any Missing item's one.
* Added the ability to import Branches. If the subfolder contains New Items and also has a separate database file, its data can be imported.
* Implemented import from digest files (*.sha1/256/512) to DB item ("new file" status only).
* DateTime stamp inheritance during Branching has become a bit smarter.
    If the selected subfolder contains only checked and matched items, the Branch will be created with a new timestamp, as a new DB.
* Improved Presets for filterable file types.
* Minor improvements to UI and dialog boxes.

---
Veretino 0.5.1
* Fixed saving the DB file name prefix.
* Optimization of manual input of the filtered types list.

---
Veretino 0.5.0
What's new:
* New Database Creation Dialog, combining basic settings and filter creation.
* A newly creating database can be flagged as immutable ("Deny Changes"), which will prevent changes to it in the future.
* Improved file type filter creation process.
    Instead of a Permanent filter, selected extensions can be flexibly remembered between sessions, adapting to the contents of working folders.
* It is now possible to check the modification date of listed files during database parsing.
    Makes it easier to work with obviously changed items.
* The Contents List (folder or db) now supports multiple selections and displays the corresponding amounts.
* Now files without read permissions can be excluded when creating the list (customizable).
* Added the ability to export individual checksums from the database to a digest file (*.ver(.json) --> *.sha1/256/512).
* Copying files and folders is now also available when browsing the file system.